# voicify

./: README.md  pyproject.toml
src/voicify/: __init__.py
src/voicify/stt/: speech_to_text.py
src/voicify/tts/: text_to_speech.py
